added icons to box-units; footer restyled; social media/contact me icons added to footer; brand icon added to navbar

--- a/app/styles/components.scss
+++ b/app/styles/components.scss
@@ -1,12 +1,12 @@
 
  //Standard Colors
  $primary-color: #DB3340;
- $secondary-color: #E3661C;
+ $secondary-color: #171717;
  $third-color:#FF2F09;
  $default-color: #1FDA9A;
  $success-color: #3E9C1A;
  $danger-color: #DE2308;
- $main-content-color: #f7eac8;
+ $main-content-color: #eee;
  $navbar-color: #28ABE3;
  $font-color: $main-content-color;
  $font-color-reverse: #4C4A4B;
