--- a/app/styles/nav.scss
+++ b/app/styles/nav.scss
@@ -9,7 +9,7 @@
   right: 0;
   top: 0;
   left: 0;
-  padding: 1.4rem;
+  padding: 15px;
   font-weight: 200;
   background-color: #eee;
   // text-align: center;
