--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -3,9 +3,10 @@
   // right: 0;
   // bottom: 0;
   // left: 0;
-  padding: 1.4rem;
+  // padding: 1.4rem;
   font-weight: 200;
   // background-color: #eee;
   text-align: center;
-  border-top: 1px solid grey;
+  padding-top: 10px;
+  // border-top: 1px solid grey;
 }
