--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -1,12 +1,10 @@
 .footer-container {
-  // position: fixed;
-  // right: 0;
-  // bottom: 0;
-  // left: 0;
-  // padding: 1.4rem;
   font-weight: 200;
-  // background-color: #eee;
   text-align: center;
   padding-top: 10px;
-  // border-top: 1px solid grey;
+}
+
+.copyright {
+  margin-top: 19px;
+  font-size: 13px;
 }
