--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -24,6 +24,46 @@ body {
   }
 }
 
+.description {
+  padding: 20px;
+  margin-top: 35px;
+  font-size: 16px;
+}
+
+.action {
+  padding: 20px;
+}
+
+.animate {
+	transition: all 0.1s;
+	-webkit-transition: all 0.1s;
+}
+
+.green {
+	background-color: #82BF56;
+	border-bottom: 5px solid #669644;
+	// text-shadow: 0px -2px #669644;
+}
+
+.action-button {
+  width: 137px;
+  height: 41px;
+  padding-top: 10px;
+  position: relative;
+  margin: 0px 10px 10px 37px;
+  float: left;
+  border-radius: 4px;
+  font-size: 25px;
+  color: #FFF;
+  font-family: 'Bungee Inline', cursive;
+  text-decoration: none;
+  &:active {
+    transform: translate(0px,5px);
+    -webkit-transform: translate(0px,5px);
+    border-bottom: 1px solid $success-color;
+  }
+}
+
 .browserupgrade {
   margin: 0.2em 0;
   background: #ccc;
@@ -93,43 +133,43 @@ body {
 
 /* entire container, keeps perspective */
 .flip-container {
-	perspective: 1000px;
+  perspective: 1000px;
 }
-	/* flip the pane when hovered */
-	.flip-container:hover .flipper, .flip-container.hover .flipper {
-		transform: rotateY(180deg);
-	}
+/* flip the pane when hovered */
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+  transform: rotateY(180deg);
+}
 
 /* flip speed goes here */
 .flipper {
-	transition: 0.6s;
-	transform-style: preserve-3d;
+  transition: 0.6s;
+  transform-style: preserve-3d;
   height: 100%;
-	position: relative;
+  position: relative;
 }
 
 /* hide back of pane during swap */
 .front, .back {
-	backface-visibility: hidden;
+  backface-visibility: hidden;
   width: 100%;
   height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 /* front pane, placed above back */
 .front {
   background: #eee;
-	z-index: 2;
+  z-index: 2;
   line-height: 250px;
-	/* for firefox 31 */
-	transform: rotateY(0deg);
+  /* for firefox 31 */
+  transform: rotateY(0deg);
 }
 
 /* back, initially hidden pane */
 .back {
   background: $font-color-reverse;
   color: white;
-	transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
