--- a/app/views/skills.html
+++ b/app/views/skills.html
@@ -1,3 +1,34 @@
 <div class="">
-  here you find my skills!! I am a javascript maniac
+  <p>
+    here you find my skills!! I am a javascript maniac
+  </p>
+  <div class="modal-section">
+    <div class="box">
+      <div class="box-unit">
+        box-unit1
+      </div>
+      <div class="box-unit">
+        box-unit2
+      </div>
+      <div class="box-unit">
+        box-unit3
+      </div>
+      <div class="box-unit">
+        box-unit4
+      </div>
+      <div class="box-unit">
+        box-unit5
+      </div>
+      <div class="box-unit">
+        box-unit6
+      </div>
+    </div>
+    <!-- <figure class="chart" data-percent="25">
+      <figcaption>JS</figcaption>
+      <img class="node" src="https://dl.dropbox-unitusercontent.com/s/v28zws1p38tjph2/node.png">
+      <svg width="200" height="200">
+        <circle class="outer" cx="95" cy="95" r="85" transform="rotate(-90, 95, 95)"/>
+      </svg>
+    </figure> -->
+  </div>
 </div>
