--- a/app/styles/dialog.scss
+++ b/app/styles/dialog.scss
@@ -1,10 +1,10 @@
 @import "components";
 
-$dialog-animation-duration: 250ms;
+$dialog-animation-duration: 350ms;
 
 .animation-target {
-  -webkit-animation: animation 1000ms linear both;
-  animation: animation 1000ms linear both;
+  -webkit-animation: animation 1000ms ease-in-out both;
+  animation: animation 1000ms ease-in-out both;
 }
 
 .is-hidden { display: none; }
@@ -33,7 +33,7 @@ $dialog-animation-duration: 250ms;
 
 .modal-content {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   opacity: 0.91;
   background: #fff;
   position: relative;
@@ -42,11 +42,19 @@ $dialog-animation-duration: 250ms;
     justify-content: space-between;
     width: 100%;
     border-bottom: 1px solid lightgray;
-    min-height: 75px;
+    height: 11vh;
     > h3 {
       align-self: center;
       margin-left: 16px;
     }
+  }
+  .modal-body {
+    padding: 0px 12px;
+    overflow-y: scroll;
+    height: 79vh;
+  }
+  .modal-footer {
+    height: 10vh;
   }
 }
 
