--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,6 +6,11 @@ body {
   background: #fafafa;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #333;
+  overflow: hidden;
+}
+
+body.is-hidden {
+    overflow: scroll;
 }
 
 .hero-unit {
