--- a/app/views/skills.html
+++ b/app/views/skills.html
@@ -14,9 +14,7 @@
           </svg>
         </figure>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+          Html is more than just divs.
         </p>
       </div>
       <div class="box-unit">
@@ -29,9 +27,9 @@
           </svg>
         </figure>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+          I have been coding css for 4 years and it has become part of my daily job
+          to solve browser compatibility issues as well as to develop simple and
+          effective styles and sometimes animations.
         </p>
       </div>
       <div class="box-unit">
@@ -44,9 +42,9 @@
           </svg>
         </figure>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+          Javascript is what I have been focusing on for the past three years.
+          My daily job is develop and maintain a client built on the AngularJS
+          framework although I do prefer to code in vanilla JS.
         </p>
       </div>
       <div class="box-unit">
@@ -59,9 +57,9 @@
           </svg>
         </figure>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+          Node came to my attention for its versatility. I worked with node on
+          building tools, restful APIs with express, electron and small file
+          system operations.
         </p>
       </div>
       <div class="box-unit">
@@ -75,9 +73,9 @@
           </svg>
         </figure>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+          I like Java. It's definetly a tech I'd like to focus on in the near
+          future. We have different java microservices at work that I contribute
+          to develop and mantain.
         </p>
       </div>
       <div class="box-unit">
@@ -91,9 +89,7 @@
           </svg>
         </figure>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+          I am always trying to improve my ruby and RoR skills.
         </p>
       </div>
       <div class="box-unit">
@@ -106,9 +102,23 @@
           </svg>
         </figure>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+          I am a positive kind of guy with great communiction skills. I like to
+          work with people.
+        </p>
+      </div>
+      <div class="box-unit">
+        <figure class="chart">
+          <svg class="dev-animation" width="100" height="100" data-skill="349">
+            <circle class="circle dev-color" cx="50" cy="50" r="50" />
+          </svg>
+          <svg id="dev" viewBox="0 0 24 24">
+              <path d="M22.7,19L13.6,9.9C14.5,7.6 14,4.9 12.1,3C10.1,1 7.1,0.6 4.7,1.7L9,6L6,9L1.6,4.7C0.4,7.1 0.9,10.1 2.9,12.1C4.8,14 7.5,14.5 9.8,13.6L18.9,22.7C19.3,23.1 19.9,23.1 20.3,22.7L22.6,20.4C23.1,20 23.1,19.3 22.7,19Z" />
+          </svg>
+        </figure>
+        <p>
+          I use gulp to serve and build the client. Npm and bower to manage
+          the dependencies. Obviously git, mainly on terminal (although gitKraken
+          is pretty nice). Go and Jenkins for CI.
         </p>
       </div>
     </div>
