--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -1,7 +1,11 @@
 .footer-container {
   font-weight: 200;
-  text-align: center!important;
+  text-align: center;
   padding-top: 10px;
+}
+
+footer {
+  text-align: center;;
 }
 
 .copyright {
