--- a/app/views/skills.html
+++ b/app/views/skills.html
@@ -73,9 +73,10 @@
           </svg>
         </figure>
         <p>
-          I like Java. It's definetly a tech I'd like to focus on in the near
-          future. We have different java microservices at work that I contribute
-          to develop and mantain.
+          I enjoy writing object oriented code and writing Junit specs. Some of the work
+          I have done recently is contributions to develop and maintain a Java microservice architecture
+          and the development of a file drop integration and a transaction driven integration
+          between two platforms.
         </p>
       </div>
       <div class="box-unit">
