[Massimo] resume button added

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -45,6 +45,11 @@ body.is-hidden {
   -webkit-transition: all 0.1s;
 }
 
+.gray {
+  background-color: lightgray;
+  border-bottom: 5px solid #171717;
+}
+
 .green {
   background-color: #82BF56;
   border-bottom: 5px solid #669644;
