--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -46,14 +46,10 @@ body.is-hidden {
 }
 
 .gray {
-  background-color: lightgray;
-  border-bottom: 5px solid #171717;
-}
-
-.green {
-  background-color: #82BF56;
-  border-bottom: 5px solid #669644;
-  // text-shadow: 0px -2px #669644;
+  background-color: $font-color-reverse;
+  border: 1px solid $standard-link-color;
+  border-bottom: 5px solid $standard-link-color;
+  border-top: none;
 }
 
 .action-button {
@@ -79,7 +75,8 @@ body.is-hidden {
   &:active {
     transform: translate(-50%,5px);
     -webkit-transform: translate(-50%,5px);
-    border-bottom: 1px solid $success-color;
+    border-bottom: 1px solid $standard-link-color;
+    border-top: 1px solid $standard-link-color;
   }
   &:hover {
     cursor: pointer;
